Kitas before REST API

--- a/kitas-landing-theme/css/company-page.css
+++ b/kitas-landing-theme/css/company-page.css
@@ -21,7 +21,8 @@
 
 .reviews-menu-container {
     display: flex;
-    width: calc(100% - 150px);
+    flex: 1;
+    /* width: calc(100% - 150px); */
     justify-content: space-around;
 }
 
